piws/views/actions: update footer.

--- a/piws/migration/static_pages/index.html
+++ b/piws/migration/static_pages/index.html
@@ -3,7 +3,7 @@
 <div class="container">
   <!-- Hero unit -->
     <div class="span7 hero-unit">
-        <p>The PIWS <i>cube</i> brings together imaging, genetics and questionnaire data into a database and exposes them using semantic web principles.<p>
+        <p>The PIWS <i>cube</i> brings together imaging, genetics and questionnaire data into a database and publishes them using semantic web principles. A Metagen bioresource can be generated to serve genetic data: the proposed semantic web framework enables to bring together the chromosome, gene and snp information.<p>
         <a href="%(demo-url)s" class="btn btn-large btn-success">Access the Demo</a>
     </div>
 	<!-- Image -->
